--- a/.github/workflows/release_bin.yaml
+++ b/.github/workflows/release_bin.yaml
@@ -4,6 +4,9 @@ on:
     tags:
       - 'v*'
 
+permissions:
+  contents: write
+
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -18,14 +21,18 @@ jobs:
 
       - name: Install Promu
         run: |
-          GO111MODULE=off go get github.com/prometheus/promu
-          echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
+          go get github.com/prometheus/promu
+          go install github.com/prometheus/promu
+
       - name: Run Promu Crossbuild
         run: |
-          promu crossbuild
+          GOARCH=arm64 promu build -v --prefix build
+          mv build/blockpi_exporter build/blockpi_exporter_arm64
+          GOARCH=amd64 promu build -v --prefix build
+          mv build/blockpi_exporter build/blockpi_exporter_amd64
 
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v2
+      - name: Release
+        uses: softprops/action-gh-release@v1
         with:
-          name: binaries
-          path: ./.build
+          files: |
+            build/*
